Emergency Performance & Sync Fixes